Update get all cars/drivers