@@ -10,15 +10,17 @@ import com.vlad.kuzhyr.driverservice.service.DriverService;
 import com.vlad.kuzhyr.driverservice.utility.constant.ExceptionMessageConstant;
 import com.vlad.kuzhyr.driverservice.utility.mapper.DriverMapper;
 import com.vlad.kuzhyr.driverservice.web.request.DriverRequest;
+import com.vlad.kuzhyr.driverservice.web.request.DriverUpdateCarsRequest;
 import com.vlad.kuzhyr.driverservice.web.response.DriverResponse;
+import com.vlad.kuzhyr.driverservice.web.response.PageResponse;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -38,12 +40,20 @@ public class DriverServiceImpl implements DriverService {
   }
 
   @Override
-  public List<DriverResponse> getAllDriver(Integer offset, Integer limit) {
+  public PageResponse<DriverResponse> getAllDriver(Integer offset, Integer limit) {
     Pageable pageable = PageRequest.of(offset, limit);
-    List<Driver> drivers = driverRepository.findAll(pageable).getContent();
-    return drivers.stream()
+    Page<Driver> driversPage = driverRepository.findByIsEnabledTrue(pageable);
+    List<DriverResponse> driversResponse = driversPage.getContent()
+            .stream()
             .map(driverMapper::toResponse)
-            .collect(Collectors.toList());
+            .toList();
+
+    return PageResponse.<DriverResponse>builder()
+            .content(driversResponse)
+            .currentOffset(offset)
+            .totalElements(driversPage.getTotalElements())
+            .totalPages(driversPage.getTotalPages())
+            .build();
   }
 
   @Override
@@ -82,6 +92,21 @@ public class DriverServiceImpl implements DriverService {
 
     List<Car> cars = carRepository.findAllById(driverRequest.carIds());
     driverMapper.updateFromRequest(driverRequest, existDriver);
+    existDriver.setCars(cars);
+    cars.forEach(car -> car.setDriver(existDriver));
+    driverRepository.save(existDriver);
+    return driverMapper.toResponse(existDriver);
+  }
+
+  @Override
+  @Transactional
+  public DriverResponse updateDriverCarsById(Long id, DriverUpdateCarsRequest driverUpdateCarsRequest) {
+    Driver existDriver = driverRepository.findDriverByIdAndIsEnabledTrue(id)
+            .orElseThrow(() -> new CarNotFoundException(
+                    ExceptionMessageConstant.DRIVER_NOT_FOUND_MESSAGE.formatted(id)
+            ));
+
+    List<Car> cars = carRepository.findAllById(driverUpdateCarsRequest.carIds());
     existDriver.setCars(cars);
     cars.forEach(car -> car.setDriver(existDriver));
     driverRepository.save(existDriver);
